<resources>
    <string name="app_name">QRDB</string>
    <string name="action_share">Share</string>
    <string name="my_qr_codes">My QR codes</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!--Menu items-->
    <string name="scan_qr_code_menu_item">Scan</string>
    <string name="scanned_qr_codes_menu_item">Scanned codes</string>
    <string name="create_qr_code_menu_item">Create new QR code</string>
    <string name="about_menu_item">About</string>
    <string name="qr_title_hint">Title</string>
    <string name="qr_description_hint">Description</string>
    <string name="btn_create_qr_code">Create QR code</string>
    <string name="btn_update_qr_code">Update QR code</string>
    <string name="btn_delete_qr_code">Delete QR code</string>
    <string name="wait_dialog_message">Please wait...</string>
    <string name="empty_field_error_message">This field can not be empty</string>
    <string name="text_too_long_message">Max %d characters</string>
    <string name="text_qr_code_not_saved">Qr code could not be saved</string>
    <string name="text_qr_code_not_deleted">Qr code could not be deleted</string>
    <string name="text_qr_code_saved">Qr code has been successfully saved</string>
    <string name="text_qr_code_updated">Qr code has been successfully updated</string>
    <string name="text_qr_code_deleted">Qr code has been successfully deleted</string>
    <string name="text_qr_code_delete_dialog_title">Delete QR code</string>
    <string name="text_confirm_delete_qr_code">Are you sure you want to delete QR code titled %s?</string>
    <string name="text_scanned_code">Scanned QR code</string>
    <string name="text_no_qr_codes">No QR codes available</string>
    <string name="text_no_qr_code_selected">No QR code selected</string>
    <string name="no_permission_to_write">Can not share QR code. Permission to write to the external storage not granted. </string>
    <string name="image_trans">qr_code_transition</string>
    <string name="text_code_not_found">Qr code has not been found</string>
    <string name="text_new_qr_code_saved">New QR code has been saved</string>
    <string name="text_existing_qr">QR code has been already scanned</string>
    <string name="text_widget_info_text">Your QR codes have been scanned %d times</string>
    
    <string name="content_description_title_input">Title input</string>
    <string name="content_description_description_input">Description input</string>
    <string name="content_description_delete">Delete</string>
    <string name="content_description_update">Update</string>
    <string name="content_description_save">Save</string>
    <string name="content_description_add_qr_code">Add QR code</string>

    
</resources>
