<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/qr_code_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:transitionName="@string/image_trans"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_qr_code_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/qr_code_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qr_title_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_qr_code_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <EditText
                    android:id="@+id/qr_code_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qr_description_hint"
                    android:maxLength="300" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btn_create_qr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_create_qr_code"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"/>

            <Button android:id="@+id/btn_update_qr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_update_qr_code"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"/>

            <Button android:id="@+id/btn_delete_qr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete_qr_code"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

</ScrollView>

</LinearLayout>