<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="60dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_qr_code_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/qr_code_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qr_title_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_qr_code_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/qr_code_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qr_description_hint"
            android:maxLength="200"
            android:lines="4"/>

    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/btn_create_qr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_qr_code"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"/>


</LinearLayout>